--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-openai</artifactId>
+            <version>2.0.0-M1</version>
+        </dependency>
+
 
 
     </dependencies>
